# kachaka-button-hub

./: .clang-tidy  .dockerignore  Dockerfile  LICENSE  README.md
button_hub/: .gitignore  Makefile  api.cpp  api.hpp  api_mutex.cpp  api_mutex.hpp  beep.cpp  beep.hpp  bluetooth.cpp  bluetooth.hpp  bluetooth_beacon.cpp  bluetooth_beacon.hpp  bluetooth_peripheral.cpp  bluetooth_peripheral.hpp  button_hub.ino  command_table.cpp  command_table.hpp  command_table_io.cpp  command_table_io.hpp  common.hpp  data.hpp  fetch_state.cpp  fetch_state.hpp  from_json.cpp  from_json.hpp  gpio_button.cpp  gpio_button.hpp  init_setup.cpp  init_setup.hpp  ip_resolver.cpp  ip_resolver.hpp  logging.cpp  logging.hpp  mutex.hpp  ota.cpp  ota.hpp  ping_to_robot.cpp  ping_to_robot.hpp  qrcode.cpp  qrcode.hpp  (+23 more)
proto/: .clang-format  kachaka-api.proto
tests/unittest/: CMakeLists.txt
tests/unittest/mock_libs/: Arduino.cpp  Arduino.h
tests/unittest/tests/: test_robot_version.cpp
tools/: build-by-docker.sh  clang_format.sh  gen_cpp_data_code.py
webui/: .eslintrc.cjs  README.md  biome.json  index.html  package-lock.json  package.json  prettierrc.js  vite.config.ts
webui/public/: license.txt
webui/src/: App.tsx  AppDev.tsx  AppWiFi.tsx  Backdrop.tsx  BottomNav.tsx  Box.tsx  ButtonImage.tsx  ButtonNameEditor.tsx  ButtonVariantIndicator.tsx  ButtonWithConfirmation.tsx  CheckboxConfigEditor.tsx  ClientCountWarning.tsx  Collapse.tsx  CommandEditor.tsx  CommandText.tsx  Distance.tsx  DurationText.tsx  Icon.tsx  InitialUi.tsx  LogDownloadAll.tsx  LogList.tsx  MainCardUi.tsx  Modal.tsx  Sheet.tsx  (+20 more)
(+23 files in other folders)
